petapp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petapp-deployment-devops
  namespace: petapp
spec:
  replicas: 1 # You can change the number of replicas as needed
  selector:
    matchLabels:
      app: petapp  # This label should match the selector in the Service
  template:
    metadata:
      labels:
        app: petapp  # This label should match the selector in the Service
    spec:
      containers:
      - name: petapp
        image: anooplivfree/petapp:754d5101ec795b99078813621ff065a921ef27dc # You can specify a different version if needed
        ports:
        - containerPort: 8080  # This should match the targetPort in the Service
