petapp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petapp-service
  namespace: petapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
# or "elb" for a classic load balancer
spec:
  type: ClusterIP
  selector:
    app: petapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
