petapp/service_ecomm.yml
apiVersion: v1
kind: Service
metadata:
  name: ecomm-service
  namespace: ecomm
  annotations:
    argocd.argoproj.io/tracking-id: ecomm:/Service:ecomm/ecomm-service
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"ecomm:/Service:ecomm/ecomm-service"},"name":"ecomm-service","namespace":"ecomm"},"spec":{"ports":[{"port":8081,"protocol":"TCP","targetPort":3000}],"selector":{"app":"ecomm"},"type":"ClusterIP"}}
# or "elb" for a classic load balancer
spec:
  type: ClusterIP
  selector:
    app: ecomm
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 3000
